--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -14,7 +14,7 @@
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
     &:hover {
-      background: #4376cd;
+      background: #5e0595;
     }
   }
   &--accent {
