--- a/src/styles/_color-palette.scss
+++ b/src/styles/_color-palette.scss
@@ -1,5 +1,5 @@
 $primary: rgba(220, 220, 220, 0.24);
-$secondary: #5695ff;
+$secondary: #7700c8;
 $palette-brand-secondary: #cebf37;
 $background--medium: #dcdcdc;
 $background--light: rgba(220, 220, 220, 0.24);
